       engine atttribute, rather than passing the flag to a whole stack of
       method calls.
     - Fixed "Argument "en_us" isn't numeric" error on Windows.
     - Now using `LC_ALL` instead of `LC_MESSAGES` when setting the locale, as
       the latter is not present on Windows.
     - The sqitch-pg RPM now requires DBD::Pg 2.0.0 or higher.

0.982  2013-09-11T18:26:07Z
     - Errors thrown by Template toolkit are no longer silently ignored.
     - Variables passed to change templates are now cloned before the
       execution of each template. This prevents one template from deleting
       variable values another template might also need.
     - Fixed "The getpwnam function is unimplemented" errors on Win32.
     - No longer runs revert scripts when deploying with `--log-only` and a
       verify script fails, as that could lead to data loss (yikes!). Thanks
       to BryLo for the report (issue #112).

0.981  2013-09-06T00:22:26Z
     - Now use Encode::Locale to try to decode the user's full name from the
       system encoding when fetched from the system on all OSes. Note that
       this is not necessary if the `user.name` config is explicitly set, as
       recommended. Issue #107.
     - Removed the special-case handling of the user's full name fetched from
       the system on OS X.
     - Added call to `sleep` to test in an attempt to fix SQLite failures.
     - The SQLite engine now requires that the SQLite client be 3.3.9 or
       later, for support of the `-bail` option.
     - Bug fix: The MySQL engine now properly uses the host, port, and
       password options when connecting to the database. Thanks to vreb87 for
       the report!

0.980  2013-08-28T21:40:00Z
     - Changed the default SQLite Sqitch database name from
       `$dbname-sqitch.$suffix` to `sqitch.$suffix`. The `$suffix` still
       comes from the destination database name. This breaks compatibility
       with previous releases. If you need the old name, set it with