@@ -17,6 +17,8 @@ Revision history for Perl extension App::Sqitch
      - Now using `LC_ALL` instead of `LC_MESSAGES` when setting the locale, as
        the latter is not present on Windows.
      - The sqitch-pg RPM now requires DBD::Pg 2.0.0 or higher.
+     - Improved handling of invalid command names so that the error message is
+       less ambiguous when triggered by a Perl parse error.
 
 0.982  2013-09-11T18:26:07Z
      - Errors thrown by Template toolkit are no longer silently ignored.
